# aws-lambda-opentelemetry

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
aws_lambda_opentelemetry/: constants.py  trace.py  utils.py
aws_lambda_opentelemetry/trace/: __init__.py  export.py  helpers.py
aws_lambda_opentelemetry/typing/: context.py
tests/: conftest.py  test_trace.py  test_utils.py  utils.py
tests/fixtures/: apigateway.json  sqs.json
tests/test_trace/: conftest.py  test_export.py  test_helpers.py
